# simple_elf

./: Cargo.toml  README.md  readme.md
src/: basic_types.rs  common.rs  elf64.rs  lib.rs
src/header/: e_ident.rs  e_machine.rs  e_type.rs  header.rs  mod.rs
src/program/: mod.rs  p_type.rs  program.rs  program_header.rs
src/section/: elf64_dyn.rs  elf64_sym.rs  mod.rs  section.rs  section_header.rs  sh_flags.rs  sh_type.rs  symbol.rs
