[package]
name = "simple_elf"
version = "0.1.1"
edition = "2021"
description = "simple parser for amd64 elf files"
authors = ["Ali Karami"]
readme = "README.md"
repository = "https://github.com/1alii/simple_elf"
license = 'GPL-2.0-only'
keywords = ["elf", "binary", "object", "parser"]

[dependencies]
enumflags2 = { version = "0.7.10", features = ["serde"] }
nom = "7.1.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
